# quant

./: .gitignore  FINANCIAL_CONCEPTS_GUIDE.md  KNOWLEDGE_CATALOG.md  ML_IMPLEMENTATION_SUMMARY.md  README.md  RISK_METRICS_QUICK_REFERENCE.md  advanced_portfolio_optimization_demo.py  api_keys.txt  chunked_extractor.py  comprehensive_simulation_demo.py  demo_knowledge_query.py  educational_demo.py  enhanced_chunked_extractor.py  enhanced_ml_models_demo.py  enhanced_system_demo.py  generate_knowledge_catalog.py  pyproject.toml  requirements.txt  robust_chunked_extractor.py  simple_knowledge_test.py  simple_test.py  standalone_extractor.py  test_auth.py  test_chunked.py  test_extraction.py  test_result.json  trading_strategies_demo.py
backtesting/: engine.py
configs/: environment.example
core/: __init__.py
core/ml/: __init__.py  anomaly_detection.py  deep_learning.py  ensemble_methods.py  feature_engineering.py  feature_selection.py  model_validation.py  regime_detection.py  reinforcement_learning.py  risk_modeling.py  time_series_models.py
core/models/: __init__.py  transformers.py
core/portfolio/: __init__.py  alternative_risk.py  black_litterman.py  dynamic_allocation.py  factor_models.py  modern_portfolio_theory.py  multi_objective.py  regime_models.py  risk_parity.py  robust_optimization.py  transaction_costs.py
core/risk/: __init__.py  monte_carlo.py  portfolio_optimizer.py  risk_metrics.py  stress_testing.py  var_calculator.py
core/simulation/: __init__.py  market_simulator.py  performance_analyzer.py  portfolio_simulator.py  position_sizer.py  strategy_tester.py  transaction_costs.py
core/strategies/: __init__.py  base_strategy.py  mean_reversion_strategies.py  ml_strategies.py  momentum_strategies.py  technical_strategies.py  trend_following_strategies.py
docs/: API_KEY_MANAGEMENT_GUIDE.md  BOOK_EXTRACTION_GUIDE.md  SYSTEM_OVERVIEW.md
research/: demo.py  extract_book_knowledge.py  managed_book_extraction.py  quick_start_demo.py
